# aoc

./: Cargo.toml
solver-dispatch/: Cargo.toml
solver-dispatch/src/: lib.rs
src/: aoc_client.rs  cache.rs  day.rs.template  main.rs  session_id_store.rs
src/datastructures/: grid.rs  iterators.rs  mod.rs
src/solvers/: mod.rs
src/solvers/year2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/solvers/year2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/solvers/year2024/src/solvers/year2024/: day23.rs
src/solvers/year2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
