[package]
edition = "2021"
name = "aoc2023"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
futures-core = "0.3.29"
inquire = "0.6.2"
keyring = "2.0.5"
reqwest = {version = "0.11.22", features = ["stream"]}
secrecy = "0.8.0"
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1.14"
