[package]
authors = ["Jan Gosmann"]
description = "Advent of Code 2023"
edition = "2021"
name = "aoc2023"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
automod = "1.0.13"
bytes = "1.5.0"
chrono = "0.4.31"
clap = {version = "4.4.10", features = ["derive"]}
dirs = "5.0.1"
futures-core = "0.3.29"
inquire = "0.6.2"
keyring = "2.0.5"
lazy-init = "0.5.1"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["stream"]}
secrecy = "0.8.0"
solver-dispatch = {path = "./solver-dispatch"}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1.14"

[dev-dependencies]
rstest = "0.18.2"
